# exercism

./: .gitignore  README.md  pyproject.toml  sync.py
bash/error-handling/: error_handling.sh
bash/hamming/: hamming.sh
bash/hello-world/: hello_world.sh
bash/two-fer/: two_fer.sh
c/armstrong-numbers/: armstrong_numbers.c
c/grains/: grains.c
c/hamming/: hamming.c
c/isogram/: isogram.c
c/resistor-color/: resistor_color.c  resistor_color.h
cpp/gigasecond/: HELP.md  gigasecond.h
cpp/grains/: grains.cpp  grains.h
cpp/hello-world/: hello_world.h
cpp/leap/: leap.h
cpp/pangram/: HELP.md  README.md  pangram.cpp  pangram.h
cpp/raindrops/: raindrops.cpp  raindrops.h
cpp/reverse-string/: reverse_string.cpp  reverse_string.h
cpp/space-age/: space_age.cpp  space_age.h
cpp/triangle/: triangle.cpp  triangle.h
go/blackjack/: blackjack.go
go/card-tricks/: card_tricks.go
go/cars-assemble/: cars_assemble.go
go/clock/: clock.go
go/difference-of-squares/: difference_of_squares.go
go/gigasecond/: gigasecond.go
go/grains/: grains.go
go/hamming/: hamming.go
go/hello-world/: hello_world.go
go/isogram/: isogram.go
go/lasagna/: lasagna.go
go/leap/: leap.go
go/luhn/: luhn.go
go/parallel-letter-frequency/: parallel_letter_frequency.go
go/party-robot/: party_robot.go
go/raindrops/: raindrops.go
go/scrabble-score/: scrabble_score.go
go/triangle/: triangle.go
go/two-fer/: two_fer.go
go/vehicle-purchase/: vehicle_purchase.go
go/weather-forecast/: weather_forecast.go
go/welcome-to-tech-palace/: welcome_to_tech_palace.go
(+224 files in other folders)
