[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Luiz F. A. de Prá <rawarkanis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
